Mon Oct 06 17:47:26 2003  George Lebl <jirka@5z.com>

	* src/mpwrap.c: during some operations we were unnecessairly
	  converting the rop only to wipe it, so add a no_convert version
	  of the extra type function (affected are division and mod in case
	  rop was of a different type)

Mon Oct 06 17:00:38 2003  George Lebl <jirka@5z.com>

	* lib/misc/misc.gel: add Identity function

	* lib/calculus/differentiation.gel, lib/calculus/limits.gel,
	  lib/functions/numerical.gel: Tolerances should be floats really

	* configure.in, lib/Makefile.am, lib/sets/Makefile.am,
	  lib/sets/basic.gel, lib/misc/misc.gel:  Move the set theoretic
	  functions from misc to new dir called 'sets'

	* lib/functions/numerical.gel: add aliases Sign and AbsoluteValue

	* src/calc.c, src/compil.c, src/dict.h, src/eval.c, src/funclib.c,
	  src/graphing.c, src/matrixw.h, src/mpwrap.[ch], src/mpzextra.c,
	  src/structs.h:  Some minor cleanup all over the place, plus 
	  more reordering and other struct tricks to reduce footprint of
	  common structures even further.

2003-10-05  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS.

Fri Sep 26 18:46:32 2003  George Lebl <jirka@5z.com>

	* src/structs.h, src/eval.c: shave 4 bytes off the GelETree (at least
	  on x86) The savings will be invisible on archs with alignment.  So
	  we're down at 20 bytes per GelETree node (plus any data of course)

2003-09-01  Metin Amiroff  <metin@karegen.com>

	configure.in: Added "az" in ALL_LINGUAS.

Sun Aug 31 23:27:00 2003  Wang Jian  <lark@linux.net.cn>

	* configure.in: Added "zh_CN" to ALL_LINGUAS.

Thu Aug 28 23:29:12 2003  George Lebl <jirka@5z.com>

	* src/calc.[ch], src/dict.[ch], src/eval.c, src/funclib.c,
	  src/genius.c, src/gnome-genius.c, src/inter.c, src/lexer.l,
	  src/mpwrap.c, src/structs.h:  Can't sleep so doing general
	  cleanup such as using standard argument checking for functions,
	  fixing up error output, converting to gel_errorout/infoout,