@@ -1,3 +1,8 @@
+Mon Oct 06 18:02:07 2003  George Lebl <jirka@5z.com>
+
+	* src/mpwrap.c: revert the change (sort of) something is wrong,
+	  and I don't have time to investigate
+
 Mon Oct 06 17:47:26 2003  George Lebl <jirka@5z.com>
 
 	* src/mpwrap.c: during some operations we were unnecessairly
